# Carrera_Al_Centro

./: CMakeLists.txt  Casilla.cpp  Casilla.h  CasillaEspecial.cpp  CasillaEspecial.h  CasillaNormal.cpp  CasillaNormal.h  Dado.cpp  Dado.h  Juego.cpp  Juego.h  Jugador.cpp  Jugador.h  README.md  Tablero.cpp  Tablero.h  main.cpp
